cms app nav and data binding

--- a/cms/src/app/contacts/contact-list/contact-list.component.html
+++ b/cms/src/app/contacts/contact-list/contact-list.component.html
@@ -5,15 +5,11 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-12">
-            <a *ngFor="let contact of contacts" href="#" class="list-group-item clearfix">
-                <div class="pull-left">
-                    <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-                    <!-- <p class="list-group-item-text"></p> -->
-                </div>
-                <span class="pull-right">
-                    <img src="{{ contact.imageUrl }}" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px">
-                </span>
-            </a>
+            <cms-contact-item 
+            *ngFor="let oneContact of contacts"
+            [contact]="oneContact"
+            (click)="onSelected(oneContact)"
+            ></cms-contact-item>
         </div>
     </div>
 </div>
