--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3>(Placeholder name)</h3>
+            <h3>{{ contact.name }}</h3>
+            <img [src]="contact.imageUrl" alt="" class="img-responsive">
             <span style="display: flex; justify-content: flex-end;">
-                <img src="#" alt="" class="img-responsive" style="max-height: 50px;">
                 <button class="btn btn-primary" type="button">Edit</button>
                 <button class="btn btn-danger" type="button">Delete</button>
             </span>
         </div>
         <div class="panel-body">
             <ul style="list-style: none; padding: 0px">
-                <li><strong>Email:</strong> placeholder text</li>
-                <li><strong>Phone:</strong> placeholder text</li>
+                <li><strong>Email:</strong> {{ contact.email }}</li>
+                <li><strong>Phone:</strong> {{ contact.phone }}</li>
             </ul>
         </div>
     
