--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -1,8 +1,13 @@
 <div class="row">
     <div class="col-md-5">
-        <cms-contact-list></cms-contact-list>
+        <cms-contact-list
+        (contactSelected)="selectedContact = $event"
+        ></cms-contact-list>
     </div>
     <div class="col-md-4">
-        <cms-contact-detail></cms-contact-detail>
+        <cms-contact-detail
+        *ngIf="selectedContact"
+        [contact]="selectedContact"
+        ></cms-contact-detail>
     </div>
 </div>
