--- a/cms/src/app/documents/document-item/document-item.component.html
+++ b/cms/src/app/documents/document-item/document-item.component.html
@@ -1,1 +1,4 @@
-<p>document-item works!</p>
+<a class="list-group-item clearfix documentDiv">
+  <!-- Display document name here -->
+  <h5>{{ document.name }}</h5>
+</a>
