--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -1,14 +1,17 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="row pad-left-right">
-      <span class="pull-left title">Add Documents</span>
+      <span class="pull-left title">Documents</span>
       <a class="btn btn-success pull-right">Add Document</a>
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
-      <!--Add tag to display a list of DocumentItem components-->
-        <cms-document-item></cms-document-item>
+      <cms-document-item 
+      *ngFor = 'let oneDocument of documents'
+      [document] = 'oneDocument'
+      (click) = 'onSelectedDocument(oneDocument)'
+      ></cms-document-item>
     </div>
   </div>
 
