--- a/course-project/src/app/recipes/recipes.component.html
+++ b/course-project/src/app/recipes/recipes.component.html
@@ -1,9 +1,7 @@
 <div class="row">
     <div class="col-md-5">
         <!--When recipe click fires, set selectedRecipe-->
-        <app-recipe-list
-        (recipeWasSelected)="selectedRecipe = $event"
-        ></app-recipe-list>
+        <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
         <!--If selectedRecipe is set, display recipe detail-->
