--- a/course-project/src/app/recipes/recipes.component.html
+++ b/course-project/src/app/recipes/recipes.component.html
@@ -5,12 +5,13 @@
     </div>
     <div class="col-md-7">
         <!--If selectedRecipe is set, display recipe detail-->
-        <app-recipe-detail 
+        <!-- <app-recipe-detail 
         *ngIf="selectedRecipe; else infoText"
         [recipe]="selectedRecipe"
         ></app-recipe-detail>
         <ng-template #infoText>
             <p>Please select a recipe.</p>
-        </ng-template>
+        </ng-template> -->
+        <router-outlet></router-outlet>
     </div>
 </div>
