--- a/cms/src/app/documents/document-item/document-item.component.html
+++ b/cms/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,8 @@
-<a class="list-group-item clearfix documentDiv">
+<a 
+class="list-group-item clearfix documentDiv"
+[routerLink]= "[document.id]"
+routerLinkActive="active"
+>
   <!-- Display document name here -->
   <h5>{{ document.name }}</h5>
 </a>
