--- a/cms/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/cms/src/app/contacts/contact-detail/contact-detail.component.html
@@ -4,8 +4,8 @@
             <h3>{{ contact.name }}</h3>
             <img [src]="contact.imageUrl" alt="" class="img-responsive">
             <span style="display: flex; justify-content: flex-end;">
-                <button class="btn btn-primary" type="button">Edit</button>
-                <button class="btn btn-danger" type="button">Delete</button>
+                <button [routerLink]="['edit']" class="btn btn-primary" type="button">Edit</button>
+                <button (click)="onDelete()" class="btn btn-danger" type="button">Delete</button>
             </span>
         </div>
         <div class="panel-body">
