--- a/cms/src/app/contacts/contacts.component.html
+++ b/cms/src/app/contacts/contacts.component.html
@@ -3,9 +3,10 @@
         <cms-contact-list></cms-contact-list>
     </div>
     <div class="col-md-4">
-        <cms-contact-detail
+        <!-- <cms-contact-detail
         *ngIf="selectedContact"
         [contact]="selectedContact"
-        ></cms-contact-detail>
+        ></cms-contact-detail> -->
+        <router-outlet></router-outlet>
     </div>
 </div>
