--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -2,15 +2,14 @@
   <div class="panel-heading">
     <div class="row pad-left-right">
       <span class="pull-left title">Documents</span>
-      <a class="btn btn-success pull-right">Add Document</a>
+      <a [routerLink]="['new']" class="btn btn-success pull-right">Add Document</a>
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
       <cms-document-item 
-      *ngFor = 'let oneDocument of documents'
+      *ngFor = 'let oneDocument of documents;'
       [document] = 'oneDocument'
-      (click) = 'onSelectedDocument(oneDocument)'
       ></cms-document-item>
     </div>
   </div>
