--- a/cms/src/app/documents/documents.component.html
+++ b/cms/src/app/documents/documents.component.html
@@ -6,9 +6,10 @@
   
     <div class="col-md-4">
         <!--Add tag to load the DocumentDetailComponent here-->
-        <cms-document-detail 
+        <!-- <cms-document-detail 
         *ngIf = "selectedDocument"
         [document] = "selectedDocument"
-        ></cms-document-detail>
+        ></cms-document-detail> -->
+        <router-outlet></router-outlet>
     </div>
 </div>
