--- a/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="col-xs-12">
-        <form action="">
+        <form (ngSubmit)="onSubmit(form)" #form="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input #nameInput type="text" id="name" class="form-control">
+                    <input ngModel name="name" type="text" id="name" class="form-control" required>
                 </div>
                 <div class="col-sm-2 from-group">
                     <label for="amount">Amount</label>
-                    <input #amountInput type="number" id="amount" class="form-control">
+                    <input ngModel name="amount" type="number" id="amount" class="form-control" [pattern]="'^[1-9]+[0-9]*$'" required>
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button class="btn btn-success" type="button" (click)="onAddItem()">Add</button>
-                        <button class="btn btn-danger" type="button">Delete</button>
-                        <button class="btn btn-primary" type="button">Clear</button>
+                        <button class="btn btn-success" type="submit" [disabled]="!form.valid">{{ editMode ? 'Update' : 'Add'}}</button>
+                        <button *ngIf="editMode" class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
+                        <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
                     </div>
                 </div>
             </div>
