document edit form

--- a/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/course-project/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,7 +4,14 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input ngModel name="name" type="text" id="name" class="form-control" required>
+                    <input 
+                        ngModel 
+                        name="name" 
+                        type="text" 
+                        id="name" 
+                        class="form-control" 
+                        required
+                        >
                 </div>
                 <div class="col-sm-2 from-group">
                     <label for="amount">Amount</label>
