--- a/cms/src/app/documents/document-edit/document-edit.component.html
+++ b/cms/src/app/documents/document-edit/document-edit.component.html
@@ -1,1 +1,69 @@
-<p>document-edit works!</p>
+<div class="panel panel-default">
+    <div class="panel-body">
+  
+      <form id="document-edit" (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="name">Document Title:</label>
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              size="120"
+              max="120"
+              name="name"
+              [ngModel]="document?.name"
+              required
+              >
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="description">Document Description:</label>
+            <input
+              type="text"
+              id="description"
+              class="form-control"
+              size="120"
+              max="255"
+              name="description"
+              [ngModel]="document?.description"
+              >
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <label for="url">Document URL:</label>
+            <input
+              type="text"
+              id="url"
+              class="form-control"
+              size="150"
+              max="255"
+              name="url"
+              [ngModel]="document?.url"
+              required
+              >
+          </div>
+        </div>
+  
+        <div *ngIf="!form.valid && form.touched" class="row alert alert-danger">
+            <div class="col-xs-12">
+                <p>The Document Title and Document URL are required fields.</p>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 btn-toolbar">
+            <button class="btn btn-success" type="submit" [disabled]="!form.valid">{{ editMode ? 'Update' : 'Save'}}</button>
+            <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
+          </div>
+        </div>
+  
+      </form>
+  
+    </div>
+  </div>
+  
+  
