--- a/cms/src/app/documents/document-list/document-list.component.html
+++ b/cms/src/app/documents/document-list/document-list.component.html
@@ -8,7 +8,7 @@
   <div class="panel-body">
     <div class="center-panel">
       <cms-document-item 
-      *ngFor = 'let oneDocument of documents;'
+      *ngFor = 'let oneDocument of documents; let i = index;'
       [document] = 'oneDocument'
       ></cms-document-item>
     </div>
