--- a/cms/src/app/contacts/contact-item/contact-item.component.html
+++ b/cms/src/app/contacts/contact-item/contact-item.component.html
@@ -2,6 +2,10 @@
 class="list-group-item clearfix"
 [routerLink]= "[contact.id]"
 routerLinkActive="active"
+dnd-draggable
+[dragEnabled]="true"
+[dragData]="contact"
+[dropZones]="['contactGroup']"
 >
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ contact.name }}</h4>
